update nama gambar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Jumbotron -->
     <div class="jumbotron text-center">
-      <img src="img/iyan.jpg" class="rounded-circle">
+      <img src="img/iyan.JPG" class="rounded-circle">
       <h1>Taqiyyan Iyan</h1>
       <div><p>Tuntaq.id | Web Development | Taqiyyan06@gmail.com</p></div>
     </div>
@@ -100,7 +100,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal1">
-                <img src="img/portofolio/1.jpg" class="img-thumbnail">
+                <img src="img/portofolio/1.JPG" class="img-thumbnail">
               </a>
              </div>
           </div>
@@ -108,7 +108,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal2">
-                <img src="img/portofolio/2.jpg" class="img-thumbnail">
+                <img src="img/portofolio/2.JPG" class="img-thumbnail">
               </a>
             </div>
           </div>
@@ -116,7 +116,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal3">
-                <img src="img/portofolio/3.jpg" class="img-thumbnail">
+                <img src="img/portofolio/3.JPG" class="img-thumbnail">
               </a>
             </div>
           </div>
@@ -124,7 +124,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal4">
-                <img src="img/portofolio/4.jpg" class="img-thumbnail">
+                <img src="img/portofolio/4.JPG" class="img-thumbnail">
               </a>
             </div>
           </div>
@@ -132,7 +132,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal5">
-                <img src="img/portofolio/5.jpg" class="img-thumbnail">
+                <img src="img/portofolio/5.JPG" class="img-thumbnail">
               </a>
             </div>
           </div>
@@ -140,7 +140,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="box">
               <a href="" class="thumbnail" data-toggle="modal" data-target="#modal6">
-                <img src="img/portofolio/6.jpg" class="img-thumbnail">
+                <img src="img/portofolio/6.JPG" class="img-thumbnail">
               </a>
             </div>
           </div>
