update nama modal

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/1.jpg" class="img-thumbnail">
+              <img src="img/portofolio/1.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
@@ -307,7 +307,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/2.jpg" class="img-thumbnail">
+              <img src="img/portofolio/2.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
@@ -321,7 +321,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/3.jpg" class="img-thumbnail">
+              <img src="img/portofolio/3.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
@@ -335,7 +335,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/4.jpg" class="img-thumbnail">
+              <img src="img/portofolio/4.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
@@ -349,7 +349,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/5.jpg" class="img-thumbnail">
+              <img src="img/portofolio/5.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
@@ -363,7 +363,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-              <img src="img/portofolio/6.jpg" class="img-thumbnail">
+              <img src="img/portofolio/6.JPG" class="img-thumbnail">
           </div>
       </div>
     </div>
